# paddleocr_ros2

./: .gitignore  DEPENDENCIES.md  README.md
recognition_service/: README.md  environment.yml  requirements.txt  setup.py  start_api_server.sh
recognition_service/config/: DEVICE.md  compass.json  digit_slots.json  rois.json
recognition_service/paddle_ocr/: __init__.py  api_server.py  digit_reader.py  paths.py  recognize_cli.py
recognition_service/scripts/: api_server.py  recognize.py
recognition_service/src/screen_ocr/: __init__.py  core.py  digit_reader.py
scripts/: api_server.py  install_ros_deps.sh  recognize.py
src/paddle_ocr/: __init__.py  core.py  package.xml  setup.cfg  setup.py
src/paddle_ocr/config/: pipeline_locator.yaml
src/paddle_ocr/launch/: pipeline_locator.launch.py
src/paddle_ocr/paddle_ocr/: __init__.py  ocr_client.py  pipeline_locator_node.py  result_mapper.py
src/paddle_ocr_msgs/: CMakeLists.txt  package.xml
src/screen_ocr/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/screen_ocr/config/: pipeline_locator.yaml
src/screen_ocr/include/screen_ocr/: ocr_client.hpp  result_mapper.hpp
src/screen_ocr/launch/: pipeline_locator.launch.py
src/screen_ocr/screen_ocr/: pipeline_locator_node.py  result_mapper.py
src/screen_ocr/src/: ocr_client.cpp  pipeline_locator_node.cpp  result_mapper.cpp
src/screen_ocr_msgs/: CMakeLists.txt  package.xml
src/screen_ocr_msgs/msg/: SensorMsg.msg
